GRADLE-168: - Changed build.gradle to include both javadocs and groovydocs in gradle distribution - Currently, most of the gradle source is excluded from the generated javadocs as something is causing javadoc to crash with a NPE.  Will include more source later
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@681 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/build.gradle
+++ b/build.gradle
@@ -141,10 +141,11 @@ archive_jar.manifest.mainAttributes("Main-Class": "org.gradle.BootstrapMain")
 explodedDistDir = new File(distsDir, 'exploded')
 explodedDistDocsDir = new File(explodedDistDir, 'docs')
 explodedDistJavadocsDir = new File(explodedDistDocsDir, 'javadoc')
+explodedDistGroovydocsDir = new File(explodedDistDocsDir, 'groovydoc')
 explodedDistSamplesDir = new File(explodedDistDir, 'samples')
 explodedDistUserguideOutputDir = new File(explodedDistSamplesDir, 'userguideOutput')
 
-createTask('explodedDist', dependsOn: ['libs', 'userguide', 'javadoc']) {
+createTask('explodedDist', dependsOn: ['libs', 'userguide', 'javadoc', 'groovydoc']) {
     [explodedDistDir, explodedDistSamplesDir]*.mkdirs()
     File explodedDistBinDir = mkdir(explodedDistDir, 'bin')
     File explodedDistSrcDir = mkdir(explodedDistDir, 'src')
@@ -258,7 +259,14 @@ dists {
     }
 }
 
-javadoc.destinationDir = explodedDistJavadocsDir
+groovydoc.destinationDir = explodedDistGroovydocsDir
+
+javadoc {
+    destinationDir = explodedDistJavadocsDir
+    include 'org/gradle/api/*'
+    exclude 'org/gradle/api/*Exception.java', '**/*Notation.java'
+}
+
 createTask('uploadJavadoc', dependsOn: 'javadoc') {
     ftp(action: 'mkdir', remotedir: javadocRemoteDir)
     ftp(action: 'delete', remotedir: javadocRemoteDir) {
