GRADLE-168: Added a 'title' property to Javadoc task. Use this in build.gradle
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@683 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/build.gradle
+++ b/build.gradle
@@ -262,8 +262,10 @@ dists {
 groovydoc.destinationDir = explodedDistGroovydocsDir
 
 javadoc {
+    title = "Gradle API $version"
     destinationDir = explodedDistJavadocsDir
-    include 'org/gradle/api/*'
+    include 'org/gradle/api/**'
+    exclude 'org/gradle/api/internal/**'
     exclude 'org/gradle/api/*Exception.java', '**/*Notation.java'
 }
 
