Refactoring: Renamed properties of the wrapper task.
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@710 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/build.gradle
+++ b/build.gradle
@@ -481,9 +481,9 @@ createTask('release', dependsOn: ['uploadDists', 'uploadUserguide', 'uploadJavad
 createTask('wrapper', type: Wrapper, dependsOn: ['init', 'archive_bin_zip']).doFirst { task ->
     task.configure {
         gradleVersion = version
-        zipBase = Wrapper.PathBase.PROJECT
-        zipPath = 'wrapper'
-        jarPath = zipPath
+        archiveBase = Wrapper.PathBase.PROJECT
+        archivePath = 'wrapper'
+        jarPath = archivePath
     }
 }
 
