--- a/build.gradle
+++ b/build.gradle
@@ -341,6 +341,8 @@ javadoc {
     destinationDir = explodedDistJavadocsDir
     include 'org/gradle/api/**'
     exclude 'org/gradle/api/internal/**'
+    // todo understand why not excluding this leads to a javadoc exception 
+    exclude 'org/gradle/api/plugins/DefaultConventionsToPropertiesMapping.java'
 }
 
 createTask('uploadJavadoc', dependsOn: ['javadoc', 'init']) {
