Fixed problem with integration tests regarding the order of xml tags.
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@755 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -7,7 +7,7 @@ usePlugin('groovy')
 
 dependencies {
     addFlatDirResolver('lib', new File(rootDir, 'lib'))
-    dependencies(['compile'], ":svnkit:1.1.6", ":svnkit-javahl:1.1.6")
+    dependencies(['compile'], ":svnkit:1.1.6", ":svnkit-javahl:1.1.6", ":xmlunit:1.2")
 }
 
 sourceCompatibility = 1.5
