--- a/src/test/resources/org/gradle/integtests/testProjects/task-action-execution-failure.gradle
+++ b/src/test/resources/org/gradle/integtests/testProjects/task-action-execution-failure.gradle
@@ -1,4 +1,6 @@
 
-createTask('broken') {
-    throw new RuntimeException('failure')
+createTask('brokenClosure') {
+    throw new RuntimeException('broken closure')
 }
+
+createTask('brokenJavaTask', type: org.gradle.integtests.BrokenTask)
