Fixed wrong ftp address for uploading.
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@833 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/build.gradle
+++ b/build.gradle
@@ -503,7 +503,7 @@ void ftp(Map args, Closure antFileset = {}) {
                 classname: 'org.apache.tools.ant.taskdefs.optional.net.FTP',
                 classpath: dependencies.antpath('ftpAntTask'))
         Map ftpArgs = args + [
-                server: 'www.gradle.org',
+                server: 'ftp.gradle.org',
                 userid: websiteFtpUserName,
                 password: websiteFtpUserPassword
         ]
