- include package org.gradle in javadocs - added javadocs to various classes.
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@864 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/build.gradle
+++ b/build.gradle
@@ -342,7 +342,8 @@ javadoc {
     destinationDir = explodedDistJavadocsDir
     include 'org/gradle/api/**'
     exclude 'org/gradle/api/internal/**'
-    // todo understand why not excluding this leads to a javadoc exception 
+    include 'org/gradle/*'
+    // todo understand why not excluding this leads to a javadoc exception
     exclude 'org/gradle/api/plugins/DefaultConventionsToPropertiesMapping.java'
 }
 
