GRADLE-71  Make default logging less verbose Added command line configuration option for setting gradle-imports file Changed classloading to enable logging delegation for groovy compile and groovydoc. Changed BootstrapMain to make it a possible entry point for a Gradle IDE launch.
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@871 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -13,10 +13,9 @@ dependencies {
 sourceCompatibility = 1.5
 targetCompatibility = 1.5
 // todo Actually it should be only groovy, but without junit we get a strange error. We need to understand this.
-groovyClasspath = {org.gradle.util.GradleUtil.groovyFiles}
-compile.groovyClasspath = org.gradle.util.GradleUtil.gradleClasspath 
-testCompile.groovyClasspath = org.gradle.util.GradleUtil.gradleClasspath
-compile.unmanagedClasspath(org.gradle.util.GradleUtil.gradleClasspath as File[])
+compile.groovyClasspath = org.gradle.util.BootstrapUtil.groovyFiles
+testCompile.groovyClasspath = org.gradle.util.BootstrapUtil.groovyFiles
+compile.unmanagedClasspath(org.gradle.util.BootstrapUtil.gradleClasspath as File[])
 test {
     include '**/*Test.class'
     exclude '**/Abstract*'
