- use a tex4ht config file to apply styles to html userguides - fixed footnotes for single html page userguide
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@899 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/build.gradle
+++ b/build.gradle
@@ -382,21 +382,27 @@ createTask('userguide', dependsOn: [userguideDir, 'userguideVersion', 'explodedD
         cleanLatex(userguideSrc)
         3.times {
             exec(output: userguideDir.toString() + '/htmlOut', executable: 'htlatex', dir: userguideSrc, failonerror: true) {
-                arg(line: "master.tex")
+                arg(line: "master.tex \"htmluserguide\"")
             }
         }
-        copy(file: new File(userguideSrc, 'master.html'), tofile: new File(explodedDistDocsDir, 'html_single/userguide.html'))
-        copy(file: new File(userguideSrc, 'html/master.css'), todir: new File(explodedDistDocsDir, 'html_single'))
+        copy(todir: new File(explodedDistDocsDir, 'html_single')) {
+            fileset(dir: userguideSrc, includes: '*.html') {
+                include(name: '*.html')
+                include(name: '*.css')
+            }
+        }
         cleanLatex(userguideSrc)
         3.times {
             exec(output: userguideDir.toString() + '/htmlSingleOut', executable: 'htlatex', dir: userguideSrc, failonerror: true) {
-                arg(line: "master.tex \"html,2\"")
+                arg(line: "master.tex \"htmluserguide,2\"")
             }
         }
         copy(todir: new File(explodedDistDocsDir, 'html')) {
-            fileset(dir: userguideSrc, includes: '*.html')
+            fileset(dir: userguideSrc, includes: '*.html') {
+                include(name: '*.html')
+                include(name: '*.css')
+            }
         }
-        copy(file: new File(userguideSrc, 'html/master.css'), todir: new File(explodedDistDocsDir, 'html'))
         cleanLatex(userguideSrc)
     }
 }
