--- a/src/docs/userguide/htmluserguide.cfg
+++ b/src/docs/userguide/htmluserguide.cfg
@@ -1,4 +1,25 @@
 
+\Preamble{xhtml}
+
+\Configure{crosslinks} {} {} {Next} {Previous} {} {} {} {Contents}
+
+\Configure{tabular}
+   {\HCode{<table class='tabular'>}}
+   {\HCode{</table>}}
+   {\HCode{<tr>}}
+   {\HCode{</tr>}}
+   {\HCode{<td colspan="\HMultispan" \ifnum \HRow=1 class='firstRow' \fi>}}
+   {\HCode{</td>}}
+
+\ConfigureEnv{titlepage} {\HCode{<div class='titlepage'>}} {\HCode{</div>}} {} {}
+
+\Configure{hline} {}
+
+\begin{document}
+\CssFile
+
+/* css.sty */
+
 body {
     font-family: arial, sans-serif;
     color: #666666;
@@ -50,6 +71,18 @@ h2.chapterHead {
     margin-top: 1.4em;
 }
 
+/* Title page */
+
+.titlepage .flushleft {
+    color: #6a915e;
+}
+
+/* TOC */
+
+.chapterToc {
+    font-weight: normal;
+}
+
 /* Tables */
 
 table {
@@ -67,20 +100,27 @@ td {
 
 /* Tabular */
 
-table.tabular {
-    font-size: 90%;
+div.tabular {
+    text-align: left;
 }
 
-tr.hline {
-    display: none;
+table.tabular {
+    font-size: 90%;
+    margin: 0;
 }
 
 table.tabular td {
     border: solid #d0d0d0 1px;
-    padding-left: 0.6em;
-    padding-right: 0.6em;
+    text-align: left;
+    padding-left: 0.8em;
+    padding-right: 0.8em;
     padding-top: 0.3em;
     padding-bottom: 0.3em;
+}
+
+table.tabular td.firstRow {
+    font-weight: bold;
+    border-bottom: solid #d0d0d0 3px;
 }
 
 /* Floats */
@@ -91,6 +131,11 @@ table.tabular td {
 
 td.float br {
     display: none;
+}
+
+td.float div.center {
+    margin: 0;
+    text-align: left;
 }
 
 table.caption {
@@ -107,9 +152,14 @@ table.caption {
 
 .crosslinks a {
     color: #666666;
+    padding-right: 1em;
 }
 
 dt.description {
     font-weight: bold;
     margin-top: 0.4em;
 }
+     
+\EndCssFile
+
+\EndPreamble
