- Some tweaks to the words on the website - Some tweaks to the html userguide layout
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@922 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/src/docs/userguide/htmluserguide.cfg
+++ b/src/docs/userguide/htmluserguide.cfg
@@ -37,6 +37,10 @@ a:visited {
     color: #444444;
 }
 
+p.indent {
+    text-indent: 0;
+}
+
 /* Code snippets */
 
 .fancyvrb {
@@ -75,6 +79,14 @@ h2.chapterHead {
 
 .titlepage .flushleft {
     color: #6a915e;
+}
+
+.titlepage .center p {
+    font-size: 80%;
+}
+
+.titlepage {
+    margin-bottom: 6em;
 }
 
 /* TOC */
@@ -154,6 +166,8 @@ table.caption {
     color: #666666;
     padding-right: 1em;
 }
+
+/* Definitions */
 
 dt.description {
     font-weight: bold;
