--- a/build.gradle
+++ b/build.gradle
@@ -66,7 +66,7 @@ dependencies {
 
     retrotranslatorAntTask ':retrotranslator-runtime:1.2.7', ':retrotranslator-transformer:1.2.7', ':backport-util-concurrent:3.1'
 
-    clientModule(['groovy'], ":groovy-all:1.5.5") {
+    clientModule(['groovy'], ":groovy-all:1.5.6") {
         clientModule(":ant:1.7.0") {
             dependencies(":ant-junit:1.7.0@jar", ":ant-launcher:1.7.0")
         }
@@ -93,7 +93,8 @@ dependencies {
             ":commons-lang:2.3@jar",
             ":webdavlib:2.0",
             ":logback-classic:0.9.8",
-            ":ivy:2.0.0-rc1@jar"
+            ":ivy:2.0.0-rc1@jar",
+            ":maven-ant-tasks:2.0.9"
     runtime ":ant-launcher:1.7.0",
             ":ant-nodeps:1.7.0",
             ":ant-trax:1.7.0",
