GRADLE-171 - Removed DependencyManager.addConfiguration(ivyconfig) - Added description property to Configuration
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@950 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/build.gradle
+++ b/build.gradle
@@ -54,7 +54,10 @@ libDir = new File(rootDir, 'lib')
 dependencies {
     addFlatDirResolver('lib', libDir)
     // todo: Improve dependency handling for xUnit jars
-    addConfiguration(new Configuration('distLib', Visibility.PRIVATE, null, ['default'] as String[], true, null))
+    addConfiguration('distLib') {
+        visible = false
+        extendsFrom 'default'
+    }
     addConfiguration('ftpAntTask')
     addConfiguration('retrotranslatorAntTask')
 
