GRADLE-221 - Started adding some samples and words for task dependencies - Changed userguide task so that it can be executed without building the exploded dist
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@960 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/build.gradle
+++ b/build.gradle
@@ -338,7 +338,7 @@ createTask('userguideVersion', dependsOn: [userguideDir]) {
     new File(userguideData, 'javadocDir.tex').write('\\def \\JAVADOCDIR {' + javadocRemoteDir + '}')
 }
 
-createTask('userguide', dependsOn: [userguideDir, 'userguideVersion', 'explodedDistBase']) {
+createTask('userguide', dependsOn: [userguideDir, 'userguideVersion']) {
     File userguideSrc = new File(srcDocsDir, 'userguide')
     ant {
         if (!isLatexInstalled()) {
