--- a/build.gradle
+++ b/build.gradle
@@ -199,7 +199,7 @@ createTask('explodedDistBase', dependsOn: ['libs', 'javadoc', 'groovydoc']) {
     }
 }
 
-createTask('explodedDist', dependsOn: ['userguide'])
+createTask('explodedDist', dependsOn: ['explodedDistBase', 'userguide'])
 
 zipRootFolder = "$archivesBaseName-${-> version}"
 
@@ -346,15 +346,15 @@ createTask('userguide', dependsOn: [userguideDir, 'userguideVersion']) {
         }
         cleanLatex(userguideSrc)
         3.times {
-            exec(output: userguideDir.toString() + '/pdfOut', executable: 'pdflatex', dir: userguideSrc, failonerror: true) {
-                arg(line: "master.tex")
+            exec(executable: 'pdflatex', dir: userguideSrc, failonerror: true) {
+                arg(line: "userguide.tex")
             }
         }
-        copy(file: new File(userguideSrc, 'master.pdf'), tofile: new File(explodedDistDocsDir, 'pdf/userguide.pdf'))
+        copy(file: new File(userguideSrc, 'userguide.pdf'), tofile: new File(explodedDistDocsDir, 'pdf/userguide.pdf'))
         cleanLatex(userguideSrc)
         3.times {
-            exec(output: userguideDir.toString() + '/htmlOut', executable: 'htlatex', dir: userguideSrc, failonerror: true) {
-                arg(line: "master.tex \"htmluserguide\"")
+            exec(executable: 'htlatex', dir: userguideSrc, failonerror: true) {
+                arg(line: "userguide.tex \"htmluserguide\"")
             }
         }
         copy(todir: new File(explodedDistDocsDir, 'html_single')) {
@@ -365,8 +365,8 @@ createTask('userguide', dependsOn: [userguideDir, 'userguideVersion']) {
         }
         cleanLatex(userguideSrc)
         3.times {
-            exec(output: userguideDir.toString() + '/htmlSingleOut', executable: 'htlatex', dir: userguideSrc, failonerror: true) {
-                arg(line: "master.tex \"htmluserguide,2\"")
+            exec(executable: 'htlatex', dir: userguideSrc, failonerror: true) {
+                arg(line: "userguide.tex \"htmluserguide,2\"")
             }
         }
         copy(todir: new File(explodedDistDocsDir, 'html')) {
