GRADLE-297   	 Add shortcut notation, to add a single dependency with a closure.
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@999 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/build.gradle
+++ b/build.gradle
@@ -84,9 +84,10 @@ dependencies {
         dependencies(":jaxen:1.1@jar")
     }
 
-    dependency(['runtime'], ":ant-junit:1.7.1") {
+    runtime(":ant-junit:1.7.1") {
         exclude(module: 'junit')
     }
+    
     compile ":jopt-simple:2.4.1",
             ":ant:1.7.1",
             ":logback-classic:0.9.9",
