Fixed bug with source distribution due to missing wrapper files.
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@1004 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/build.gradle
+++ b/build.gradle
@@ -300,7 +300,7 @@ dists {
                 include 'gradlew'
             }
             zipFileSet(dir: projectDir, prefix: zipRootFolder) {
-                include 'buildSrc/', 'gradle-wrapper/', 'lib/', 'src/', 'gradle.properties', 'build.gradle', 'gradlew.bat'
+                include 'buildSrc/', 'wrapper/', 'lib/', 'src/', 'gradle.properties', 'build.gradle', 'gradlew.bat'
             }
         }
     }
